Fix spacing in sidebar articles

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -26,6 +26,7 @@ section {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
+  justify-content: space-between;
 }
 
 .featured-grid .article:last-child {
